--- a/app/views/workallocation/pages/wa-show-work-filter-options.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-options.html
@@ -63,7 +63,7 @@ My work
             </div>
             <div class="hmcts-filter__heading-action">
               <p>
-                <a class="govuk-link govuk-link--no-visited-state" href="">Clear filters</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="wa-show-work-filter-options-zero">Clear filters</a>
               </p>
             </div>
           </div>
@@ -101,7 +101,7 @@ My work
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
-                Applicatoin
+                Application
               </a>
             </li>
           </ul>
