--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        XUI prototypes
+        XUI prototypes test
       </h1>
 
       <p class="govuk-body">This is the prototype to let judges, panel members, legal advisors, solicitors, paralegals manage cases.</p>
