--- a/app/views/searchcases/transition/caselist.html
+++ b/app/views/searchcases/transition/caselist.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicialtransition.html" %}
 {% else %}
-    {% extends "../layoutstafftransition.html" %}
+    {% extends "../layoutstafftransition_new.html" %}
 {% endif %}
 
 
@@ -24,9 +24,11 @@ Case details
         <button class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button">
               Show filter
         </button>
+        <!--
         <p style="margin: 24px;">
             <a href="findcase">Find case</a>
         </p>
+        -->
     </div>
 
 
