--- a/app/views/searchcases/transition/caselistonly.html
+++ b/app/views/searchcases/transition/caselistonly.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutstaffcaslistonly.html" %}
 {% else %}
-    {% extends "../layoutstaffcaslistonly.html" %}
+    {% extends "../layoutstaffcaslistonly_new.html" %}
 {% endif %}
 
 
